# inviwo

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .issuetracker  AUTHORS  Brewfile  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  HalfEdges.cpp  INSTALL.md  Jenkinsfile  LICENSE  README.md  WARP.md  csv.inv  error.py  fancymeshrenderermodule.cpp  index.html  projectionTests.py  requirements.txt  timeTest.py  tst.inv  vcpkg.json  x-vcpkg.json
apps/: CMakeLists.txt
apps/configurable/: CMakeLists.txt  configparser.cpp  configparser.h  example.cfg  gui.cpp  gui.h  main.cpp
apps/inviwo/: CMakeLists.txt  inviwo.cpp  inviwomainwindow.cpp  inviwomainwindow.h  inviwosplashscreen.cpp  inviwosplashscreen.h
apps/inviwo/packaging/: AppRun  packaging.cmake
apps/inviwo_glfwminimum/: CMakeLists.txt  glfwminimum.cpp
apps/inviwo_qtminimum/: CMakeLists.txt  qtminimum.cpp
apps/inviwodome/: CMakeLists.txt  DomePreset.json  inviwodome.cpp  inviwodomecfg.cmake  packaging.cmake
apps/inviwodome/scripts/: 1_nodes.xml  2_nodes.xml  control_and_fisheye.json  martin.xml  single_fisheye.json  two_nodes.json
apps/inviwodome/src/: dumpfiles.cpp  inviwodome.cpp  sgctmanager.cpp  workspacewatcher.cpp
apps/inviwopyapp/: CMakeLists.txt  README.md  a.out  deep_tf_dataset.py  deeptf_predict.py  inviwo.py  inviwopyapp.cpp  inviwopytest.py  ivw_interface.py  requirements.txt  richdoc.py  setup.py  test_image_inject.py  test_inject.py  test_raycast.py  volume_injector.py  volume_raycast.py
apps/minimals/glfw/: CMakeLists.txt  glfwminimum.cpp
apps/minimals/qt/: CMakeLists.txt  qtminimum.cpp
apps/unittests/: CMakeLists.txt  depends.cmake  inviwounittest.cpp
docs/: CMakeLists.txt  EventMapper.monopic  building.md  changelog.md  docutils.cmake  doxygen.cmake  fancymeshrenderer.qch  main.md  namespaces.dox  strip-qhp.cmake
docs/css/: doxygen.css
docs/filter/: glslfilter.py
docs/help/: stylesheet.css
docs/manual/: manual.md
docs/markdown/: DevGuide_BuildProcessor.md  DevGuide_BuildProperty.md  DevGuide_Data_Memory.md  DevGuide_InviwoPy.md  DevGuide_Meta.md  DevGuide_PythonProcessors.md  GettingStarted_Build.md  GettingStarted_Network.md  GettingStarted_UI.md  Index.md  Windows-Code-Signing.md
docs/python-api/: conf.py.in  index.rst.in
docs/style/: customstyle.css  search.css
ext/: CMakeLists.txt  CMakeLists.txt.bak
ext/CRoaring/: CMakeLists.txt  README.md
ext/CRoaring/CRoaring/: CMakeLists.txt
ext/benchmark/: CMakeLists.txt
ext/flags/: CMakeLists.txt  LICENSE  README.md  allow_flags.h  flags.h  iterator.h
ext/fmt/: CMakeLists.txt
ext/glm/: CMakeLists.txt  LICENSE
ext/glm/gtc/: epsilon.hpp  epsilon.inl
ext/glm/gtx/: string_cast.inl
ext/gtest/: CMakeLists.txt
ext/gtest/src/: gtest-internal-inl.h
ext/half/: CMakeLists.txt  LICENSE  half.hpp
ext/json/: CMakeLists.txt
ext/libjpeg/: CMakeLists.txt  jconfig.h  jmorecfg.h
ext/libpng/: CMakeLists.txt  LICENSE.txt  example.c  png.c  png.h  pngerror.c  pngmem.c  pngpread.c  pngpriv.h  pngrio.c  pngset.c  pngtrans.c  pngwrite.c
ext/md4c/: CMakeLists.txt
ext/openexr/: CMakeLists.txt
ext/openexr/ilmbase-2.2.0/: CMakeLists.txt
ext/openexr/openexr-2.2.0/: CMakeLists.txt
ext/qt/: LICENSE.txt  README.md
ext/sigar/: CMakeLists.txt
ext/sigar/examples/: CMakeLists.txt  processlist.c  systeminfo.c
ext/sigar/include/: sigar.h  sigar_private.h  sigar_util.h
ext/sigar/src/: sigar.c  sigar_fileinfo.c  sigar_ptql.c
ext/sml/: CMakeLists.txt
ext/span/: CMakeLists.txt
ext/stackwalker/: CMakeLists.txt  LICENSE.txt  StackWalker.cpp  StackWalker.h
ext/tclap/: CMakeLists.txt  MultiSwitchArg.h  StandardTraits.h  ValueArg.h
ext/ticpp/: CMakeLists.txt  ticpp.h  ticppapi.h  tinyxml.cpp
ext/ticpp/src/: attribute.cpp  base.cpp  comment.cpp  declaration.cpp  document.cpp  element.cpp  fwd.cpp  handle.cpp  node.cpp  parsingdata.cpp  printer.cpp  stylesheet.cpp  text.cpp  ticpp.cpp  ticpprc.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp  unknown.cpp  visitor.cpp
ext/tiff/: CMakeLists.txt  Makefile.am  Makefile.in  README-inviwo.md  README.inviwo.adaptions.txt  autogen.sh  configure  configure.ac
ext/tiff/cmake/: CXXLibrary.cmake  DeflateCodec.cmake  JPEGCodec.cmake  PkgConfig.cmake  WindowsSupport.cmake
ext/tiff/config/: config.h.in
ext/tiff/contrib/: Makefile.in
ext/tiff/html/: CMakeLists.txt  Makefile.in  addingtags.html  index.html
ext/tiff/libtiff/: CMakeLists.txt  Makefile.am  Makefile.in  libtiff.def  tiffconf.h.cmake.in
ext/tiff/man/: CMakeLists.txt  Makefile.in
ext/tiff/port/: CMakeLists.txt  Makefile.in
ext/tiff/test/: CMakeLists.txt  Makefile.am  Makefile.in  custom_dir_EXIF_231.c  rational_precision2double.c  test_directory.c  test_signed_tags.c
ext/tiff/tools/: CMakeLists.txt  Makefile.in  pal2rgb.c  ppm2tiff.c  raw2tiff.c  tiff2bw.c  tiff2pdf.c  tiff2ps.c  tiff2rgba.c  tiffcp.c  tiffcrop.c  tiffdither.c  tiffdump.c  tiffinfo.c  tiffmedian.c  tiffset.c  tiffsplit.c
ext/tinydir/: CMakeLists.txt  tinydir.h
ext/units/: CMakeLists.txt
ext/utf/: CMakeLists.txt  README.md
ext/vld/: AUTHORS.txt  CHANGES.txt  CMakeLists.txt  vld.h  vld.ini  vld_def.h
ext/warn/: CMakeLists.txt  pop  push  warn.cmake  warnings.md  warnings.txt
ext/warn/ignore/: all  arc-bridge-casts-disallowed-in-nonarc  arc-repeated-use-of-weak  arithmetic-overflow  assign-base-inaccessible  assign-could-not-be-generated  automatic-inline  behavior-change  bool-conversion  c++11-extensions  c++98-compat  c++98-compat-pedantic  cast-align  catch-semantic-changed  compatibility-c++98  conditional-uninitialized  constant-conditional  constant-conversion  conversion  conversion-loss  conversion-sign-extended  copy-ctor-could-not-be-generated  covered-switch-default  deprecated  deprecated-declarations  deprecated-implementations  deprecated-objc-isa-usage  deprecated-register  dflt-ctor-base-inaccessible  dflt-ctor-could-not-be-generated  digraphs-not-supported  disabled-macro-expansion  dll-interface  (+85 more)
ext/zlib-1.2.11/: CMakeLists.txt
(+35844 files in other folders)
