if(IVW_APP_MINIMAL_GLFW)
    add_subdirectory(minimals/glfw)
endif()
if(IVW_APP_MINIMAL_QT)
    add_subdirectory(minimals/qt)
endif()
if(IVW_APP_INVIWO)
	add_subdirectory(inviwo)
endif()
if(IVW_APP_PYTHON)
	add_subdirectory(inviwopyapp)
endif()
if(IVW_APP_INVIWO_DOME)
	add_subdirectory(inviwodome)
endif()
